Add services and team section and refine certifications

--- a/index.html
+++ b/index.html
@@ -110,6 +110,192 @@ permalink: /
 </div>
 </section>
 
+<!-- Services -->
+<section class="container mb-2 pb-2 pb-md-4 pb-lg-5">
+  <div class="card border-0 bg-secondary p-md-5 px-sm-2 pt-4 pb-3">
+    <div class="card-body mx-auto" style="max-width: 860px;">
+      <h2 class="h1 mb-4 text-center">What we do</h2>
+      <p class="mb-4 pb-3 fs-lg text-center text-muted">Our services typically fall into the following categories, but at the end of the day, our goal is to put together all the missing pieces of the puzzle to drive your organization to success.</p>
+
+      <!-- Accordion: Alternative style -->
+      <div class="accordion" id="accordion-services">
+
+        <!-- Item -->
+        <div class="accordion-item border-0 rounded-3 shadow-sm mb-3">
+          <h3 class="accordion-header" id="heading-1">
+            <button class="accordion-button fs-xl shadow-none rounded-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-1" aria-expanded="true" aria-controls="collapse-1">Salesforce Development</button>
+          </h3>
+          <div class="accordion-collapse collapse show" id="collapse-1" aria-labelledby="heading-1" data-bs-parent="#accordion-services">
+            <div class="accordion-body pt-0">
+              <div class="d-flex flex-md-row flex-column align-items-md-center">
+                <img src="assets/img/salesforce-partner-square-solid.png" width="100" alt="Salesforce Partner" class="me-md-4 mb-md-0 mb-3">
+                <div class="ps-md-3">
+                  <p class="mb-0">Our <span class="text-gradient-primary">bread and butter</span>. With over 15 years in cumulative Salesforce experience, we know how to develop, integrate, optimize, refactor, debug, fix or really anything else that your Salesforce org might be needing.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Item -->
+        <div class="accordion-item border-0 rounded-3 shadow-sm mb-3">
+          <h3 class="accordion-header" id="heading-2">
+            <button class="accordion-button fs-xl shadow-none rounded-3 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-2" aria-expanded="true" aria-controls="collapse-2">Salesforce Architecture</button>
+          </h3>
+          <div class="accordion-collapse collapse" id="collapse-2" aria-labelledby="heading-2" data-bs-parent="#accordion-services">
+            <div class="accordion-body pt-0">
+              <div class="d-flex flex-md-row flex-column align-items-md-center">
+                <img src="assets/img/salesforce-partner-square.png" width="100" alt="Salesforce Partner" class="me-md-4 mb-md-0 mb-3">
+                <div class="ps-md-3">
+                  <p class="mb-0">We know the Salesforce ecosystem inside and out and can create technical, system, and product designs for implementation. We either do this as a prerequisite to our own development or can work closely with your internal or external development teams to deliver the solution.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Item -->
+        <div class="accordion-item border-0 rounded-3 shadow-sm mb-3">
+          <h3 class="accordion-header" id="heading-3">
+            <button class="accordion-button fs-xl shadow-none rounded-3 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-3" aria-expanded="true" aria-controls="collapse-3">Full-Stack Development</button>
+          </h3>
+          <div class="accordion-collapse collapse" id="collapse-3" aria-labelledby="heading-3" data-bs-parent="#accordion-services">
+            <div class="accordion-body pt-0">
+              <div class="d-flex flex-md-row flex-column align-items-md-center">
+                <i class="bx bx-code-alt bx-lg ms-4 me-md-4 mb-md-0 mb-3"></i>
+                <div class="ps-md-4">
+                  <p class="mb-0">If your software ecosystem extends beyond Salesforce, we have extensive experience working within Cloud Platforms such as <span class="text-gradient-primary">Heroku, AWS, and Google Cloud</span> alongside a number of languages and frameworks. And if we don't have experience yet in your exact setup, we fancy ourselves to be quick learners.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Item -->
+        <div class="accordion-item border-0 rounded-3 shadow-sm mb-3">
+          <h3 class="accordion-header" id="heading-5">
+            <button class="accordion-button fs-xl shadow-none rounded-3 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-5" aria-expanded="true" aria-controls="collapse-5">Technical Consulting</button>
+          </h3>
+          <div class="accordion-collapse collapse" id="collapse-5" aria-labelledby="heading-5" data-bs-parent="#accordion-services">
+            <div class="accordion-body pt-0">
+              <div class="d-flex flex-md-row flex-column align-items-md-center">
+                <img src="assets/img/digital.svg" width="150" alt="Application Development" class="me-md-4 mb-md-0 mb-3">
+                <div class="ps-md-3">
+                  <p class="mb-0">Not sure what's needed just yet or how to wire it all together? We work closely with you and your team to take a <span class="text-gradient-primary">spark of an idea and turn it into an efficient and scalable system</span>.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Item -->
+        <div class="accordion-item border-0 rounded-3 shadow-sm mb-3">
+          <h3 class="accordion-header" id="heading-6">
+            <button class="accordion-button fs-xl shadow-none rounded-3 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-6" aria-expanded="true" aria-controls="collapse-6">Strategic Consulting</button>
+          </h3>
+          <div class="accordion-collapse collapse" id="collapse-6" aria-labelledby="heading-6" data-bs-parent="#accordion-services">
+            <div class="accordion-body pt-0">
+              <div class="d-flex flex-md-row flex-column align-items-md-center">
+                <img src="assets/img/chart.svg" width="300" alt="Strategy" class="me-md-4 mb-md-0 mb-3">
+                <div class="ps-md-3">
+                  <p class="mb-0">We've design and managed <span class="text-gradient-primary">software budgets of up to $1.4M</span>. We've helped companies both migrate into Salesforce to achieve a higher ROI and out of Salesforce to focus on custom application development. We have hands on experience with a wide range of CRMs, Cloud Providers, ERPs, and other cloud-based, third-party solutions that can help you company get the strategic edge it needs.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Item -->
+        <div class="accordion-item border-0 rounded-3 shadow-sm mb-3">
+          <h3 class="accordion-header" id="heading-7">
+            <button class="accordion-button fs-xl shadow-none rounded-3 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-7" aria-expanded="true" aria-controls="collapse-7">Software Diligence</button>
+          </h3>
+          <div class="accordion-collapse collapse" id="collapse-7" aria-labelledby="heading-7" data-bs-parent="#accordion-services">
+            <div class="accordion-body pt-0">
+              <div class="d-flex flex-md-row flex-column align-items-md-center">
+                <img src="assets/img/insurance.svg" width="200" alt="Digital Advertising" class="me-md-4 mb-md-0 mb-3">
+                <div class="ps-md-3">
+                  <p class="mb-0">Aquiring a company or a codebase and need to do due diligence on the technical assets? We work closely with you and your team to understand your organization's expectations and ensure all potential assets meet your requirements.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Team -->
+<section class="container py-2 my-md-2 my-lg-3">
+  <h2 class="h1 text-center pt-1 pb-3 mb-3 mb-lg-4">Our Team</h2>
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-3 g-3">
+
+    <!-- Item -->
+    <div class="col">
+      <div class="card card-hover border-0 bg-transparent">
+        <div class="position-relative">
+          <img src="assets/img/jon-profile.jpg" class="rounded-3" alt="Jon Duelfer">
+          <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center rounded-3">
+            <span class="position-absolute top-0 start-0 w-100 h-100 bg-dark opacity-25 rounded-3"></span>
+            <div class="position-relative d-flex zindex-2">
+              <a href="https://www.linkedin.com/in/jonathan-duelfer-53749bba/" class="btn btn-icon btn-secondary btn-linkedin btn-sm bg-white" aria-label="LinkedIn">
+                <i class="bx bxl-linkedin"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="card-body text-center p-3">
+          <h3 class="fs-lg fw-semibold pt-1 mb-2">Jon Duelfer</h3>
+          <p class="fs-sm mb-0">CEO &amp; Application Architect</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Item -->
+    <div class="col">
+      <div class="card card-hover border-0 bg-transparent">
+        <div class="position-relative">
+          <img src="assets/img/tamara-profile.jpeg" class="rounded-3" alt="Tamara Chance">
+          <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center rounded-3">
+            <span class="position-absolute top-0 start-0 w-100 h-100 bg-dark opacity-25 rounded-3"></span>
+            <div class="position-relative d-flex zindex-2">
+              <a href="https://www.linkedin.com/in/tamarachance-salesforce/" class="btn btn-icon btn-secondary btn-linkedin btn-sm bg-white" aria-label="LinkedIn">
+                <i class="bx bxl-linkedin"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="card-body text-center p-3">
+          <h3 class="fs-lg fw-semibold pt-1 mb-2">Tamara Chance</h3>
+          <p class="fs-sm mb-0">Software Developer</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- Item -->
+    <div class="col">
+      <div class="card card-hover border-0 bg-transparent">
+        <div class="position-relative">
+          <img src="assets/img/caitlin-profile.jpg" class="rounded-3" alt="Caitlin Sullivan">
+          <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center rounded-3">
+            <span class="position-absolute top-0 start-0 w-100 h-100 bg-dark opacity-25 rounded-3"></span>
+            <div class="position-relative d-flex zindex-2">
+              <a href="https://www.linkedin.com/in/mary-caitlin-harrison/" class="btn btn-icon btn-secondary btn-linkedin btn-sm bg-white" aria-label="LinkedIn">
+                <i class="bx bxl-linkedin"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="card-body text-center p-3">
+          <h3 class="fs-lg fw-semibold pt-1 mb-2">Caitlin Sullivan</h3>
+          <p class="fs-sm mb-0">Software Developer</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- Certs (Carousel) -->
 <section class="container pb-4 pb-lg-5 mb-3">
   <div class="swiper mx-n2" data-swiper-options='{
@@ -148,42 +334,42 @@ permalink: /
     <div class="swiper-wrapper">
       <div class="swiper-slide py-3">
         <div class="card card-body card-hover px-2 mx-2">
-          <img src="assets/img/certs/application-architect.png" class="d-block mx-auto my-2" width="140" alt="application architect">
+          <img src="assets/img/certs/application-architect.png" class="d-block mx-auto my-2" width="125" alt="application architect">
         </div>
       </div>
       <div class="swiper-slide py-3">
         <div class="card card-body card-hover px-2 mx-2">
-          <img src="assets/img/certs/data-architect.png" class="d-block mx-auto my-2" width="140" alt="data architect">
+          <img src="assets/img/certs/data-architect.png" class="d-block mx-auto my-2" width="125" alt="data architect">
         </div>
       </div>
       <div class="swiper-slide py-3">
         <div class="card card-body card-hover px-2 mx-2">
-          <img src="assets/img/certs/developer-2.png" class="d-block mx-auto my-2" width="140" alt="developer 2">
+          <img src="assets/img/certs/developer-2.png" class="d-block mx-auto my-2" width="125" alt="developer 2">
         </div>
       </div>
       <div class="swiper-slide py-3">
         <div class="card card-body card-hover px-2 mx-2">
-          <img src="assets/img/certs/developer-1.png" class="d-block mx-auto my-2" width="140" alt="developer 1">
+          <img src="assets/img/certs/developer-1.png" class="d-block mx-auto my-2" width="125" alt="developer 1">
         </div>
       </div>
       <div class="swiper-slide py-3">
         <div class="card card-body card-hover px-2 mx-2">
-          <img src="assets/img/certs/sales-cloud-consultant.png" class="d-block mx-auto my-2" width="140" alt="sales cloud consultant">
+          <img src="assets/img/certs/sales-cloud-consultant.png" class="d-block mx-auto my-2" width="125" alt="sales cloud consultant">
         </div>
       </div>
       <div class="swiper-slide py-3">
         <div class="card card-body card-hover px-2 mx-2">
-          <img src="assets/img/certs/admin.png" class="d-block mx-auto my-2" width="140" alt="admin">
+          <img src="assets/img/certs/admin.png" class="d-block mx-auto my-2" width="125" alt="admin">
         </div>
       </div>
       <div class="swiper-slide py-3">
         <div class="card card-body card-hover px-2 mx-2">
-          <img src="assets/img/certs/app-builder.png" class="d-block mx-auto my-2" width="140" alt="app builder">
+          <img src="assets/img/certs/app-builder.png" class="d-block mx-auto my-2" width="125" alt="app builder">
         </div>
       </div>
       <div class="swiper-slide py-3">
         <div class="card card-body card-hover px-2 mx-2">
-          <img src="assets/img/certs/visibility-architect.png" class="d-block mx-auto my-2" width="140" alt="visibility architect">
+          <img src="assets/img/certs/visibility-architect.png" class="d-block mx-auto my-2" width="125" alt="visibility architect">
         </div>
       </div>
 
