general cleanup of terminology

--- a/index.html
+++ b/index.html
@@ -41,15 +41,11 @@ permalink: /
             Complex problems <span class="text-gradient-primary">Simple solutions</span>
           </h1>
           <div class="d-md-flex align-items-md-start">
-            <a href="mailto:jon@duelfersolutions.com" class="btn btn-lg btn-primary flex-shrink-0 me-md-4 mb-md-0 mb-sm-4 mb-3">Work with us</a>
+            <a href="mailto:info@duelfersolutions.com" class="btn btn-lg btn-primary flex-shrink-0 me-md-4 mb-md-0 mb-sm-4 mb-3">Work with us</a>
             <p class="d-lg-block d-none mb-0 ps-md-3">We're a dedicated team of technical architects and software developers with a focus on <span class="text-gradient-primary">Salesforce</span> - but no reason to stop there.</p>
           </div>
         </div>
         
-        <!-- Team image -->
-        <!-- div class="col-sm-6 col-9 order-md-2 order-1">
-          <img src="/assets/img/team-image.svg" style="fill-opacity: 0.2;">
-        </div -->
         <!-- Scroll down btn -->
         <div class="d-inline-flex align-items-center justify-content-center justify-content-md-start position-relative">
           <a href="#benefits" data-scroll data-scroll-offset="100" class="btn btn-video btn-icon rounded-circle shadow-sm flex-shrink-0 stretched-link me-3" aria-label="Scroll for more">
@@ -86,7 +82,7 @@ permalink: /
       <div class="text-center">
         <img src="assets/img/award.svg" width="48" alt="Graph" class="d-block mb-4 mx-auto">
         <h4 class="mb-2 pb-1">Multi-Cloud Expertise</h4>
-        <p class="mx-auto" style="max-width: 336px;">Salesforce (Sales, Service, , Marketing, Net Zero, Nonprofit), Heroku, AWS, Firebase, Slack and <span class="text-gradient-primary">20 Certifications</span> to prove it.</p>
+        <p class="mx-auto" style="max-width: 336px;">Salesforce (Sales, Service, Marketing, Net Zero, Nonprofit), Heroku, AWS, Firebase, Slack and <span class="text-gradient-primary">20 Certifications</span> to prove it.</p>
       </div>
     </div>
     <div class="swiper-slide border-end-lg px-2">
@@ -115,7 +111,7 @@ permalink: /
   <div class="card border-0 bg-secondary p-md-5 px-sm-2 pt-4 pb-3">
     <div class="card-body mx-auto" style="max-width: 860px;">
       <h2 class="h1 mb-4 text-center">What we do</h2>
-      <p class="mb-4 pb-3 fs-lg text-center text-muted">Our services typically fall into the following categories, but at the end of the day, our goal is to put together all the missing pieces of the puzzle to drive your organization to success.</p>
+      <p class="mb-4 pb-3 fs-lg text-center text-muted">Our services typically fall into the following categories, but at the end of the day, our goal is to provide any missing pieces to drive your organization to success.</p>
 
       <!-- Accordion: Alternative style -->
       <div class="accordion" id="accordion-services">
@@ -147,7 +143,7 @@ permalink: /
               <div class="d-flex flex-md-row flex-column align-items-md-center">
                 <img src="assets/img/salesforce-partner-square.png" width="100" alt="Salesforce Partner" class="me-md-4 mb-md-0 mb-3">
                 <div class="ps-md-3">
-                  <p class="mb-0">We know the Salesforce ecosystem inside and out and can create technical, system, and product designs for implementation. We either do this as a prerequisite to our own development or can work closely with your internal or external development teams to deliver the solution.</p>
+                  <p class="mb-0">We know the Salesforce ecosystem <span class="text-gradient-primary">inside and out</span> and create comprehensive technical, system, and product designs for implementation. We provide this either as a prerequisite to our own development or can work closely with your internal or external development teams to deliver the solution.</p>
                 </div>
               </div>
             </div>
@@ -239,7 +235,7 @@ permalink: /
           <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center rounded-3">
             <span class="position-absolute top-0 start-0 w-100 h-100 bg-dark opacity-25 rounded-3"></span>
             <div class="position-relative d-flex zindex-2">
-              <a href="https://www.linkedin.com/in/jonathan-duelfer-53749bba/" class="btn btn-icon btn-secondary btn-linkedin btn-sm bg-white" aria-label="LinkedIn">
+              <a href="https://www.linkedin.com/in/jonathan-duelfer-53749bba/" target="_blank" class="btn btn-icon btn-secondary btn-linkedin btn-sm bg-white" aria-label="LinkedIn">
                 <i class="bx bxl-linkedin"></i>
               </a>
             </div>
@@ -260,7 +256,7 @@ permalink: /
           <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center rounded-3">
             <span class="position-absolute top-0 start-0 w-100 h-100 bg-dark opacity-25 rounded-3"></span>
             <div class="position-relative d-flex zindex-2">
-              <a href="https://www.linkedin.com/in/tamarachance-salesforce/" class="btn btn-icon btn-secondary btn-linkedin btn-sm bg-white" aria-label="LinkedIn">
+              <a href="https://www.linkedin.com/in/tamarachance-salesforce/" target="_blank" class="btn btn-icon btn-secondary btn-linkedin btn-sm bg-white" aria-label="LinkedIn">
                 <i class="bx bxl-linkedin"></i>
               </a>
             </div>
@@ -281,7 +277,7 @@ permalink: /
           <div class="card-img-overlay d-flex flex-column align-items-center justify-content-center rounded-3">
             <span class="position-absolute top-0 start-0 w-100 h-100 bg-dark opacity-25 rounded-3"></span>
             <div class="position-relative d-flex zindex-2">
-              <a href="https://www.linkedin.com/in/mary-caitlin-harrison/" class="btn btn-icon btn-secondary btn-linkedin btn-sm bg-white" aria-label="LinkedIn">
+              <a href="https://www.linkedin.com/in/mary-caitlin-harrison/" target="_blank" class="btn btn-icon btn-secondary btn-linkedin btn-sm bg-white" aria-label="LinkedIn">
                 <i class="bx bxl-linkedin"></i>
               </a>
             </div>
@@ -463,9 +459,9 @@ permalink: /
       <div class="card-body p-md-5 p-4 bg-size-cover" style="background-image: url(assets/img/contact-bg.png);">
         <div class="py-md-5 py-4 text-center">
           <h3 class="h4 fw-normal text-light opacity-75">Want to work with us? Let's talk</h3>
-          <a href="mailto:jon@duelfersolutions.com" class="display-6 text-light">jon@duelfersolutions.com</a>
+          <a href="mailto:info@duelfersolutions.com" class="display-6 text-light">info@duelfersolutions.com</a>
           <div class="pt-md-5 pt-4 pb-md-2">
-            <a href="mailto:jon@duelfersolutions.com" class="btn btn-lg btn-light">Contact us</a>
+            <a href="mailto:info@duelfersolutions.com" class="btn btn-lg btn-light">Contact us</a>
           </div>
         </div>
       </div>
