--- a/index.html
+++ b/index.html
@@ -3,31 +3,8 @@ layout: home
 title: Duelfer Solutions
 permalink: /
 ---
-<!-- Navbar -->
-<!-- Remove "navbar-sticky" class to make navigation bar scrollable with the page if desired -->
-<header class="header navbar navbar-expand-lg position-absolute navbar-sticky">
-  <div class="container px-3">
-    <a href="index.html" class="navbar-brand pe-3">
-      <img src="/assets/img/duelfer-solutions-logo.svg" style="height:45px;" alt="Duelfer Solutions">
-    </a>
-    <div id="navbarNav" class="offcanvas offcanvas-end">
-      <div class="offcanvas-header border-bottom">
-        <h5 class="offcanvas-title">Menu</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a href="/blog" class="nav-link">Blog</a>
-          </li>
-        </ul>
-      </div>     
-    </div>
-    <button type="button" class="navbar-toggler" data-bs-toggle="offcanvas" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  </div>
-</header>
+
+{%- include navbar.html -%}
 
 <!-- Hero -->
 <section class="jarallax position-relative d-flex align-items-center min-vh-100 bg-light mb-5 py-lg-5 pt-5" style="background-image: url(assets/img/hero-bg.svg);" data-jarallax data-img-position="0% 100%" data-speed="0.5">
