--- a/thanks.html
+++ b/thanks.html
@@ -1,7 +1,7 @@
 ---
 layout: landing
 title: Thank You
-permalink: /thank-you
+permalink: /thanks
 ---
 <!-- BG light version -->
 <div class="d-dark-mode-none position-absolute top-0 start-0 w-100 h-100 bg-repeat-0 bg-position-center bg-size-cover" style="background-image: url(assets/img/bg.jpg);"></div>
