--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@ permalink: /contact
         <nav class="pt-lg-4 pb-3 mb-2 mb-sm-3" aria-label="breadcrumb">
         <ol class="breadcrumb mb-0">
             <li class="breadcrumb-item">
-            <a href="index.html"><i class="bx bx-home-alt fs-lg me-1"></i>Home</a>
+            <a href="/"><i class="bx bx-home-alt fs-lg me-1"></i>Home</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">Contact</li>
         </ol>
