--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@ function timestamp() { var response = document.getElementById("g-recaptcha-respo
                 <h2 class="card-title pb-3 mb-4">Tell us about yourself</h2>
 
                 <form class="row g-4 needs-validation" action="https://webto.salesforce.com/servlet/servlet.WebToLead?encoding=UTF-8&orgId=00DfJ000002ZxlY" method="POST" novalidate>
-                    <input type=hidden name='captcha_settings' value='{"keyname":"keypair","fallback":"true","orgId":"00DfJ000002ZxlY","ts":""}'>
+                    <input type=hidden name='captcha_settings' value='{"keyname":"second","fallback":"true","orgId":"00DfJ000002ZxlY","ts":""}'>
                     <input type=hidden name="oid" value="00DfJ000002ZxlY">
                     <input type=hidden name="retURL" value="https://duelfersolutions.com/thanks">
 
