--- a/salesforce-development.html
+++ b/salesforce-development.html
@@ -32,7 +32,7 @@ keywords: salesforce development, salesforce implementation partner, salesforce 
                 <p class="fs-xl">We're a Salesforce Implementation Partner and a small, local team of dedicated Salesforce Developers looking for impactful and meaninful projects. We implement from scratch and build into and fix existing systems.</p>
             </div>
             <div class="col-lg-2">
-                <img class="mt-1" "assets/img/salesforce-partner-square-solid.png" width="75" alt="Graph">
+                <img class="mt-1" src="assets/img/salesforce-partner-square-solid.png" width="75" alt="Graph">
             </div>
         </div>
         <a href="/contact" class="btn btn-lg btn-primary shadow-primary">Work With Us</a>
