Update both button links to point to contact lead form

--- a/salesforce-development.html
+++ b/salesforce-development.html
@@ -288,7 +288,7 @@ keywords: salesforce development, salesforce implementation partner, salesforce 
             <div class="ps-xl-5 ms-md-2 ms-lg-4">
               <h2 class="h1 mb-3 mb-sm-4">We personalize how we work to fit your project needs</h2>
               <p class="mb-4 mb-lg-5">Massa enim libero dictumst consectetur in convallis lobortis cursus mi a magna ullamcorper consectetur purus quisque.</p>
-              <a href="#" class="btn btn-lg btn-primary shadow-primary">Start your project</a>
+              <a href="/contact" class="btn btn-lg btn-primary shadow-primary">Start your project</a>
             </div>
           </div>
         </div>
@@ -325,6 +325,6 @@ keywords: salesforce development, salesforce implementation partner, salesforce 
         <div class="container position-relative zindex-5 text-center my-xl-3 py-1 py-md-4 py-lg-5">
           <p class="lead text-light opacity-70 mb-3">Ready to get started?</p>
           <h2 class="h1 text-light pb-3 pb-lg-0 mb-lg-5">Launch Your Project with Us</h2>
-          <a href="#" class="btn btn-primary shadow-primary btn-lg">Work with us</a>
+          <a href="/contact" class="btn btn-primary shadow-primary btn-lg">Work with us</a>
         </div>
       </section>
